# prime

./: .gitignore  CMakeLists.txt  README.en.md  README.md  main.cpp  main_mt.cpp
include/: main_mt.h
src/MT/: main.cpp  main_mt.cpp  mt.cpp
test/: test.cpp
test/test_mt/: test_mt.cpp
